k8s/keycloak-deployment/keycloak-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-app
spec:
  selector:
    matchLabels:
      app: keycloak-app
  template:
    metadata:
      labels:
        app: keycloak-app
    spec:
      containers:
      - name: keycloak-app
        image: bitnami/keycloak
        resources:
          limits:
            memory: "2000Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-app-service
spec:
  selector:
    app: keycloak-app
  ports:
  - port: 8080
    targetPort: 8080
