k8s/keycloak-deployment/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-app-ingress
  labels:
    name: keycloak-app-ingress
spec:
  rules:
  - host: "keycloak-app.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-app-service
            port: 
              number: 8080
